# sea-serpent

./: .gitignore  Cargo.toml  README.md  flake.nix
.sea-serpent/: data.json
migrations/01_setup/: down.sql  up.sql
migrations/02_file_index/: down.sql  up.sql
migrations/20230404_create_tags/: up.sql
migrations/20230405_create_attributes/: down.sql  up.sql
src/: args.rs  format.rs  lib.rs  logging.rs  main.rs
src/cli/: args.rs  logging.rs  main.rs
src/database/: config.rs  data.rs  error.rs  find.rs  mod.rs  search.rs  tag.rs
src/database/data/: mod.rs  models.rs
src/database/storage/: mod.rs  models.rs
src/script/: mod.rs
src/search/: lexer.rs  mod.rs  parser.rs
src/utils/: files.rs
