[package]
name = "sea-serpent"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
# Cli
structopt = "0.3"
fern = "0.6"
colored = { version = "^2.0" }
# Error handling
thiserror = "1.0.30"
displaydoc = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
