[package]
name = "sea-serpent"
version = "0.1.0"
edition = "2021"

[lib]
name = "seaserpent"
path = "src/lib.rs"

[[bin]]
name = "sea-serpent"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:structopt","dep:fern"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
rt-format = "^0.3"
# Cli
structopt = { version = "0.3", optional = true }
fern = { version = "0.6", optional = true }
colored = { version = "^2.0" }
log = "0.4"
# Error handling
thiserror = "1.0.30"
displaydoc = "0.2"
# Database
diesel = { version = "2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0"

[profile.release]
lto = true
strip = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
